--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,7 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
 html,
 body,
 #__next,
@@ -14,6 +15,7 @@ body,
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -124,13 +126,25 @@ body,
 }
 
 form input {
-  color: var(--foreground);
+  color: white;
 }
+
+form select {
+  background-color: inherit;
+  color: white;
+}
+
+form select option {
+  background-color: #333;
+  color: white;
+}
+
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
